# rdflime-util

./: .gitignore  index.md  pyproject.toml  readme.md
data/: download.sh
data/aaup-salaries/: manual_fixes.json
data/aaup-universities/: data_fixed.tsv
data/forbes-companies/: data_fixed.tsv  manual_fixes.json
data/mercer-cities/: data_fixed.tsv  manual_fixes.json
data/metacritic-albums/: data_fixed.tsv  manual_fixes.json
data/metacritic-movies/: data_fixed.tsv  manual_fixes.json
data/user-study/: surveyFinal.json
data/user-study/design/resources/: questions.md
explanations/: apple.html  dexia.html  samsung.html  screwed.html  svc_10_cbow_100_401_1.html
notebooks/: 0_DatasetExploration.ipynb  0_MovieDatasetExploration.ipynb  1_DBpediaFixes.ipynb  2_EmbeddingGeneration.ipynb  2_InitialPipeline.ipynb  3_RDFLIME.ipynb  3_limetest.ipynb  4_LimeEval.ipynb  4_limeEval.ipynb  5_SurveyEval.ipynb  _expgen.py  rdflimeConfig.py  test.gexf
notebooks/batch-generation/: _embeval.py  _embgen.py  _expvis.py  readme.md
notebooks/experiments/: chancellor_occupations.tsv  chancellors.ipynb  w2v_minimal.ipynb
notebooks/experiments/feature-extraction/: binary_extraction.csv  chancellor_embedding.csv  chancellor_occupations.tsv  chancellors.ipynb  relative_count_extraction.csv
notebooks/experiments/survey-eval/: surveyEval.ipynb
scripts/: 0_PythonEnvironment.sh  1_FusekiServer.sh  1a_InstallFusekiServer.sh  1b_RunFusekiServer.sh  EmbeddingEvaluation.py
