[tool.poetry]
name = "rdflime-util"
version = "0.1.0"
description = ""
authors = ["Rouven Grenz"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipykernel = "^6.13.0"
pyrdf2vec = "^0.2.3"
gensim = "^4.1.2"
rdflib = "^6.1.1"
aiohttp = "^3.8.1"
sklearn = "^0.0"
lime = {path = "../rdflime-core", develop = true }
requests = "^2.27.1"
evaluation-framework = {git = "https://github.com/mariaangelapellegrino/Evaluation-Framework.git", rev = "ddfd4ea654a3d7d2abd58f062ec98a8a736f8f51"}
pandas = "1.0.5"
pyvis = "^0.2.1"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
